Transform this project from JDK8 to JDK17